style/minimal.css
html {
 line-height:1.15;
 -webkit-text-size-adjust:100%
}
body {
 margin:0
}
h1 {
 font-size:2em;
 margin:.67em 0
}
hr {
 box-sizing:content-box;
 height:0;
 overflow:visible
}
pre {
 font-family:monospace,monospace;
 font-size:1em
}
a {
 background-color:transparent
}
abbr[title] {
 border-bottom:none;
 text-decoration:underline;
 -webkit-text-decoration:underline dotted;
 text-decoration:underline dotted
}
b,
strong {
 font-weight:bolder
}
code,
kbd,
samp {
 font-family:monospace,monospace;
 font-size:1em
}
small {
 font-size:80%
}
sub,
sup {
 font-size:75%;
 line-height:0;
 position:relative;
 vertical-align:baseline
}
sub {
 bottom:-.25em
}
sup {
 top:-.5em
}
img {
 border-style:none
}
button,
input,
optgroup,
select,
textarea {
 font-family:inherit;
 font-size:100%;
 line-height:1.15;
 margin:0
}
button,
input {
 overflow:visible
}
button,
select {
 text-transform:none
}
[type=button],
[type=reset],
[type=submit],
button {
 -webkit-appearance:button
}
[type=button]::-moz-focus-inner,
[type=reset]::-moz-focus-inner,
[type=submit]::-moz-focus-inner,
button::-moz-focus-inner {
 border-style:none;
 padding:0
}
[type=button]:-moz-focusring,
[type=reset]:-moz-focusring,
[type=submit]:-moz-focusring,
button:-moz-focusring {
 outline:1px dotted ButtonText
}
fieldset {
 padding:.35em .75em .625em
}
legend {
 box-sizing:border-box;
 color:inherit;
 display:table;
 max-width:100%;
 padding:0;
 white-space:normal
}
progress {
 vertical-align:baseline
}
textarea {
 overflow:auto
}
[type=checkbox],
[type=radio] {
 box-sizing:border-box;
 padding:0
}
[type=number]::-webkit-inner-spin-button,
[type=number]::-webkit-outer-spin-button {
 height:auto
}
[type=search] {
 -webkit-appearance:textfield;
 outline-offset:-2px
}
[type=search]::-webkit-search-decoration {
 -webkit-appearance:none
}
::-webkit-file-upload-button {
 -webkit-appearance:button;
 font:inherit
}
details {
 display:block
}
summary {
 display:list-item
}
[hidden],
template {
 display:none
}
.border-box,
a,
article,
aside,
blockquote,
body,
code,
dd,
div,
dl,
dt,
fieldset,
figcaption,
figure,
footer,
form,
h1,
h2,
h3,
h4,
h5,
h6,
header,
html,
input[type=email],
input[type=number],
input[type=password],
input[type=tel],
input[type=text],
input[type=url],
legend,
li,
main,
nav,
ol,
p,
pre,
section,
table,
td,
textarea,
th,
tr,
ul {
 box-sizing:border-box
}
.aspect-ratio {
 height:0;
 position:relative
}
.aspect-ratio--16x9 {
 padding-bottom:56.25%
}
.aspect-ratio--9x16 {
 padding-bottom:177.77%
}
.aspect-ratio--4x3 {
 padding-bottom:75%
}
.aspect-ratio--3x4 {
 padding-bottom:133.33%
}
.aspect-ratio--6x4 {
 padding-bottom:66.6%
}
.aspect-ratio--4x6 {
 padding-bottom:150%
}
.aspect-ratio--8x5 {
 padding-bottom:62.5%
}
.aspect-ratio--5x8 {
 padding-bottom:160%
}
.aspect-ratio--7x5 {
 padding-bottom:71.42%
}
.aspect-ratio--5x7 {
 padding-bottom:140%
}
.aspect-ratio--1x1 {
 padding-bottom:100%
}
.aspect-ratio--object {
 position:absolute;
 top:0;
 right:0;
 bottom:0;
 left:0;
 width:100%;
 height:100%;
 z-index:100
}
img {
 max-width:100%
}
.cover {
 background-size:cover!important
}
.contain {
 background-size:contain!important
}
.bg-center {
 background-position:50%
}
.bg-center,
.bg-top {
 background-repeat:no-repeat
}
.bg-top {
 background-position:top
}
.bg-right {
 background-position:100%
}
.bg-bottom,
.bg-right {
 background-repeat:no-repeat
}
.bg-bottom {
 background-position:bottom
}
.bg-left {
 background-repeat:no-repeat;
 background-position:0
}
.outline {
 outline:1px solid
}
.outline-transparent {
 outline:1px solid transparent
}
.outline-0 {
 outline:0
}
.ba {
 border-style:solid;
 border-width:1px
}
.bt {
 border-top-style:solid;
 border-top-width:1px
}
.br {
 border-right-style:solid;
 border-right-width:1px
}
.bb {
 border-bottom-style:solid;
 border-bottom-width:1px
}
.bl {
 border-left-style:solid;
 border-left-width:1px
}
.bn {
 border-style:none;
 border-width:0
}
.b--black {
 border-color:#000
}
.b--near-black {
 border-color:#111
}
.b--dark-gray {
 border-color:#333
}
.b--mid-gray {
 border-color:#555
}
.b--gray {
 border-color:#777
}
.b--silver {
 border-color:#999
}
.b--light-silver {
 border-color:#aaa
}
.b--moon-gray {
 border-color:#ccc
}
.b--light-gray {
 border-color:#eee
}
.b--near-white {
 border-color:#f4f4f4
}
.b--white {
 border-color:#fff
}
.b--white-90 {
 border-color:hsla(0,0%,100%,.9)
}
.b--white-80 {
 border-color:hsla(0,0%,100%,.8)
}
.b--white-70 {
 border-color:hsla(0,0%,100%,.7)
}
.b--white-60 {
 border-color:hsla(0,0%,100%,.6)
}
.b--white-50 {
 border-color:hsla(0,0%,100%,.5)
}
.b--white-40 {
 border-color:hsla(0,0%,100%,.4)
}
.b--white-30 {
 border-color:hsla(0,0%,100%,.3)
}
.b--white-20 {
 border-color:hsla(0,0%,100%,.2)
}
.b--white-10 {
 border-color:hsla(0,0%,100%,.1)
}
.b--white-05 {
 border-color:hsla(0,0%,100%,.05)
}
.b--white-025 {
 border-color:hsla(0,0%,100%,.025)
}
.b--white-0125 {
 border-color:hsla(0,0%,100%,.0125)
}
.b--black-90 {
 border-color:rgba(0,0,0,.9)
}
.b--black-80 {
 border-color:rgba(0,0,0,.8)
}
.b--black-70 {
 border-color:rgba(0,0,0,.7)
}
.b--black-60 {
 border-color:rgba(0,0,0,.6)
}
.b--black-50 {
 border-color:rgba(0,0,0,.5)
}
.b--black-40 {
 border-color:rgba(0,0,0,.4)
}
.b--black-30 {
 border-color:rgba(0,0,0,.3)
}
.b--black-20 {
 border-color:rgba(0,0,0,.2)
}
.b--black-10 {
 border-color:rgba(0,0,0,.1)
}
.b--black-05 {
 border-color:rgba(0,0,0,.05)
}
.b--black-025 {
 border-color:rgba(0,0,0,.025)
}
.b--black-0125 {
 border-color:rgba(0,0,0,.0125)
}
.b--dark-red {
 border-color:#e7040f
}
.b--red {
 border-color:#ff4136
}
.b--light-red {
 border-color:#ff725c
}
.b--orange {
 border-color:#ff6300
}
.b--gold {
 border-color:#ffb700
}
.b--yellow {
 border-color:gold
}
.b--light-yellow {
 border-color:#fbf1a9
}
.b--purple {
 border-color:#5e2ca5
}
.b--light-purple {
 border-color:#a463f2
}
.b--dark-pink {
 border-color:#d5008f
}
.b--hot-pink {
 border-color:#ff41b4
}
.b--pink {
 border-color:#ff80cc
}
.b--light-pink {
 border-color:#ffa3d7
}
/* ... */

